tests/sksl/errors/InVarWithInitializerExpression.glsl
### Compilation failed:

error: 1: 'in' variables cannot use initializer expressions
in float x = 1;
             ^
1 error
